<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DDD"
        android:gravity="center"
        android:padding="5dp">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvScoreText"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/yourScore"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tvFinalResult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="TextView"
                android:textColor="#000"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="35sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btRestart"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/restartQuiz"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btQuit"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/quitApp"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>