<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DDD"
        android:gravity="center"
        android:padding="5dp">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvDefinitionText"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/options"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tvDefinition"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="TextView"
                android:textColor="#000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTerm"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/pickOne"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btTermOne"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="Button"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btTermTwo"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="Button"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btTermThree"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="Button"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btTermFour"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="Button"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvIsAnswer"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/row8"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btNextQuestion"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/nextQuestion"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:backgroundTint="#2F0CC4"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>